Update AuthService.java